--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 @import "libs/reset.scss";
-
+@import "./animation.scss";
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
@@ -14,11 +14,11 @@ $secondaryColor : #FF79DA;
 $tertiaryColor : #99E2D0;
 
 
-%title{
+%title {
     font-family: 'Shrikhand', cursive;
 }
 
-%btn{
+%btn {
     border-radius: 50px;
     padding: 15px;
     background-image: linear-gradient(0deg,$primaryColor,$secondaryColor);
@@ -26,6 +26,12 @@ $tertiaryColor : #99E2D0;
     color: white;
     font-weight: 500;
     font-size: 16px;
+    transition: all 0.4s ease-in-out;
+
+    &:hover {
+        opacity: 0.8;
+        box-shadow: 3px 3px 10px #000000 ;
+    }
 }
 
 .header {
@@ -34,6 +40,16 @@ $tertiaryColor : #99E2D0;
     justify-content: center;
     margin-top: 20px;
     margin-bottom: 10px;
+    align-items: center;
+
+    &__logo {
+        position: relative;
+    }
+
+    &__backButton {
+        position: absolute;
+        right: 90%;
+    }
 }
 
 .localisation {
@@ -68,10 +84,6 @@ $tertiaryColor : #99E2D0;
 .exploration__button {
     margin-top: 25px;
     @extend %btn;
-
-    &:hover {
-        background-image: linear-gradient(0deg,lighten($primaryColor,5),lighten($secondaryColor,5));
-    }
 }
 
 .fonctionnement {
@@ -84,7 +96,7 @@ $tertiaryColor : #99E2D0;
     margin-bottom: 25px;
 }
 
-.fonctionnement__stepsList{
+.fonctionnement__stepsList {
 
     counter-reset: step-counter ;
     margin: 0 1%;
@@ -106,7 +118,7 @@ $tertiaryColor : #99E2D0;
     }
 }
 
-.fonctionnement__step{
+.fonctionnement__step {
     background-color: #F3F3F3;
     border-radius: 20px;
     box-shadow: 3px 3px 10px #b8b8b8;
@@ -145,8 +157,9 @@ $tertiaryColor : #99E2D0;
     border-radius: 10px;
     margin-bottom: 15px;
     box-shadow: 3px 3px 10px #b8b8b8;
+    overflow: hidden;
 
-    a{
+    a {
         text-decoration: none;
         color: black;
     }
@@ -156,7 +169,7 @@ $tertiaryColor : #99E2D0;
 
     height: 200px;
 
-    img{
+    img {
         border-radius: 10px 10px 0 0;
         width: 100%;
         height: 200px;
@@ -177,9 +190,11 @@ $tertiaryColor : #99E2D0;
 }
 
 .restaurant__details {
+    background-color: white;
     padding: 15px 15px 15px 15px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .restaurant__title {
@@ -189,12 +204,14 @@ $tertiaryColor : #99E2D0;
 .restaurant__heart {
     display: flex;
     align-items: center;
+    background-color: inherit;
+    overflow: hidden;
 
-    i{
+    i {
         font-size: 25px;
     }
 
-    &--full{
+    &--full {
         z-index: 0;
         background: linear-gradient($primaryColor,$secondaryColor);
         background-clip: text;
@@ -204,13 +221,13 @@ $tertiaryColor : #99E2D0;
 
     &--empty {
         position: relative;
-        background-color: white;
+        background-color: inherit;
         right: -50%;
         z-index: 1;
+        transition: all 0.5s ease-in-out;
 
         &:hover {
-            color: transparent;
-            background-color: transparent;
+            opacity: 0;
         }
     }
 }
@@ -232,8 +249,8 @@ footer {
     margin-bottom: 20px;
 }
 
-.footer__links{
-    li{
+.footer__links {
+    li {
         margin-bottom: 10px;
     }
 }
@@ -246,5 +263,246 @@ footer {
     i {
         width: 15px;
         margin-right: 10px;
+    }
+}
+
+.header__backButton {
+    font-size: 25px;
+}
+
+.restaurantPage {
+    background-color: #f3f3f3;
+    padding-bottom: 50px;
+}
+
+.restaurantPage__img {
+    height: 225px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.restaurantPage__title {
+    @extend %title;
+    background-color: #f3f3f3;
+    position: relative;
+    top: -40px;
+    padding: 40px 25px 0 25px;
+    border-radius: 40px 40px 0 0;
+    font-size: 25px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.menuCategory {
+
+    padding: 0 15px 0 15px ;
+    margin-bottom: 40px;
+    animation: appear 0.5s ease-in forwards;
+    opacity: 0;
+
+    &__title {
+        margin-bottom: 5px;
+    }
+
+    hr {
+        width: 10%;
+        height: 3px;
+        border-radius: 50px;
+        background-color: $tertiaryColor;
+        margin-bottom: 20px;
+    }
+}
+
+.menuCard {
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 3px 3px 10px #b8b8b8;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    overflow: hidden;
+
+    &:hover .menuCard__checkIcon {
+        animation: slideIn 0.3s ease-in-out;
+        width: 50px;
+
+        .wrapIcon {
+            animation: rotate 0.3s ease-in-out backwards;
+            animation-delay: 0.1s;
+        }
+    }
+}
+
+.menuCard__checkIcon {
+    display: flex;
+    overflow: hidden;
+    background-color: $tertiaryColor;
+    width: 0px;
+    align-items: center;
+    justify-content: center;
+}
+
+.menuCard__details {
+    padding: 12px;
+    flex-grow: 1;
+}
+
+.menuCard__title {
+    margin-bottom: 7px;
+}
+
+.menuCard__description {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+}
+
+.menuCard__price {
+    font-weight: 600;
+    margin-right: 5px;
+}
+
+.restaurantPage__orderButton {
+
+    text-align: center;
+
+    button {
+        @extend %btn;
+        width: 45%;
+    }
+}
+
+.wrapIcon {
+    padding: 3px;
+    border-radius: 50%;
+    background-color: white;
+    color: $tertiaryColor;
+    font-size: 12px;
+    rotate: 180deg;
+}
+
+// menu animation
+
+.delay-1 {
+    animation-delay: 0.5s;
+}
+
+.delay-2 {
+    animation-delay: 1s;
+}
+
+// loader animation
+
+.loader {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-color: #FFFFFF99;
+    z-index: 1;
+    animation: disappear 1s ease-in forwards;
+    animation-delay: 2s;
+}
+
+.loader__item-1 {
+    position: absolute;
+    top: 50vh;
+    left: 50vw;
+    z-index: 3;
+    height: 20px;
+    width: 20px;
+    border-radius: 0%;
+    overflow: hidden;
+    background-color: $primaryColor;
+    animation: loader 1s ease-in-out forwards;
+    animation-iteration-count: 3;
+}
+
+.loader__item-2 {
+    position: absolute;
+    top: 50vh;
+    left: 50vw;
+    z-index: 2;
+    height: 20px;
+    width: 20px;
+    border-radius: 0%;
+    overflow: hidden;
+    background-color: $secondaryColor;
+    animation: loader 1s ease-in-out forwards;
+    animation-delay: 0.1s;
+    animation-iteration-count: 3;
+}
+
+.loader__item-3 {
+    position: absolute;
+    top: 50vh;
+    left: 50vw;
+    z-index: 1;
+    height: 20px;
+    width: 20px;
+    border-radius: 0%;
+    overflow: hidden;
+    background-color: $tertiaryColor;
+    animation: loader 1s ease-in-out forwards;
+    animation-delay: 0.2s;
+    animation-iteration-count: 3;
+}
+
+@media screen and (min-width:767px) {
+
+    .fonctionnement__stepsList {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .fonctionnement__step {
+        margin-bottom: 20px;
+    }
+
+    .menuCategory>ol {
+        display: flex; 
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .menuCard {
+        width: 48%;
+    }
+}
+
+@media screen and (min-width:992px) {
+
+    .restaurants__list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .restaurant {
+        width: 48%;
+    }
+
+    .menuCategory {
+        display: flex;
+        flex-direction: column;
+
+        &__title {
+            align-self: center;
+        }
+
+        hr {
+            align-self: center;
+        }
+    }
+
+    .menuCard {
+        width: 35%;
+    }
+
+    .restaurantPage__orderButton {
+
+        button {
+            width: 30%;
+        }
     }
 }
