--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 */
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap");
-html, body, div, span, applet, object, iframe,
+html, body, div, span, applet, object, iframe, hr,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -54,17 +54,75 @@ table {
   border-spacing: 0;
 }
 
+@keyframes loader {
+  0% {
+    transform: translate(20px, 20px);
+  }
+  25% {
+    transform: translate(-20px, 20px);
+  }
+  50% {
+    transform: translate(-20px, -20px);
+  }
+  75% {
+    transform: translate(20px, -20px);
+  }
+  100% {
+    transform: translate(20px, 20px);
+  }
+}
+@keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 0%;
+  }
+  100% {
+    z-index: -10;
+    visibility: hidden;
+  }
+}
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@keyframes slideIn {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 50px;
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
 * {
   box-sizing: border-box;
   font-weight: 300;
   font-family: "Roboto", sans-serif;
 }
 
-.footer__title {
+.restaurantPage__title, .footer__title {
   font-family: "Shrikhand", cursive;
 }
 
-.exploration__button {
+.restaurantPage__orderButton button, .exploration__button {
   border-radius: 50px;
   padding: 15px;
   background-image: linear-gradient(0deg, #9356DC, #FF79DA);
@@ -72,6 +130,11 @@ table {
   color: white;
   font-weight: 500;
   font-size: 16px;
+  transition: all 0.4s ease-in-out;
+}
+.restaurantPage__orderButton button:hover, .exploration__button:hover {
+  opacity: 0.8;
+  box-shadow: 3px 3px 10px #000000;
 }
 
 .header {
@@ -80,6 +143,14 @@ table {
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 10px;
+  align-items: center;
+}
+.header__logo {
+  position: relative;
+}
+.header__backButton {
+  position: absolute;
+  right: 90%;
 }
 
 .localisation {
@@ -112,9 +183,6 @@ table {
 
 .exploration__button {
   margin-top: 25px;
-}
-.exploration__button:hover {
-  background-image: linear-gradient(0deg, #a16be0, #ff93e1);
 }
 
 .fonctionnement {
@@ -184,6 +252,7 @@ table {
   border-radius: 10px;
   margin-bottom: 15px;
   box-shadow: 3px 3px 10px #b8b8b8;
+  overflow: hidden;
 }
 .restaurant a {
   text-decoration: none;
@@ -213,9 +282,11 @@ table {
 }
 
 .restaurant__details {
+  background-color: white;
   padding: 15px 15px 15px 15px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .restaurant__title {
@@ -225,6 +296,8 @@ table {
 .restaurant__heart {
   display: flex;
   align-items: center;
+  background-color: inherit;
+  overflow: hidden;
 }
 .restaurant__heart i {
   font-size: 25px;
@@ -238,13 +311,13 @@ table {
 }
 .restaurant__heart--empty {
   position: relative;
-  background-color: white;
+  background-color: inherit;
   right: -50%;
   z-index: 1;
+  transition: all 0.5s ease-in-out;
 }
 .restaurant__heart--empty:hover {
-  color: transparent;
-  background-color: transparent;
+  opacity: 0;
 }
 
 h3 {
@@ -275,6 +348,226 @@ footer {
 .footer__link i {
   width: 15px;
   margin-right: 10px;
+}
+
+.header__backButton {
+  font-size: 25px;
+}
+
+.restaurantPage {
+  background-color: #f3f3f3;
+  padding-bottom: 50px;
+}
+
+.restaurantPage__img {
+  height: 225px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.restaurantPage__title {
+  background-color: #f3f3f3;
+  position: relative;
+  top: -40px;
+  padding: 40px 25px 0 25px;
+  border-radius: 40px 40px 0 0;
+  font-size: 25px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.menuCategory {
+  padding: 0 15px 0 15px;
+  margin-bottom: 40px;
+  animation: appear 0.5s ease-in forwards;
+  opacity: 0;
+}
+.menuCategory__title {
+  margin-bottom: 5px;
+}
+.menuCategory hr {
+  width: 10%;
+  height: 3px;
+  border-radius: 50px;
+  background-color: #99E2D0;
+  margin-bottom: 20px;
+}
+
+.menuCard {
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 3px 3px 10px #b8b8b8;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+.menuCard:hover .menuCard__checkIcon {
+  animation: slideIn 0.3s ease-in-out;
+  width: 50px;
+}
+.menuCard:hover .menuCard__checkIcon .wrapIcon {
+  animation: rotate 0.3s ease-in-out backwards;
+  animation-delay: 0.1s;
+}
+
+.menuCard__checkIcon {
+  display: flex;
+  overflow: hidden;
+  background-color: #99E2D0;
+  width: 0px;
+  align-items: center;
+  justify-content: center;
+}
+
+.menuCard__details {
+  padding: 12px;
+  flex-grow: 1;
+}
+
+.menuCard__title {
+  margin-bottom: 7px;
+}
+
+.menuCard__description {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+}
+
+.menuCard__price {
+  font-weight: 600;
+  margin-right: 5px;
+}
+
+.restaurantPage__orderButton {
+  text-align: center;
+}
+.restaurantPage__orderButton button {
+  width: 45%;
+}
+
+.wrapIcon {
+  padding: 3px;
+  border-radius: 50%;
+  background-color: white;
+  color: #99E2D0;
+  font-size: 12px;
+  rotate: 180deg;
+}
+
+.delay-1 {
+  animation-delay: 0.5s;
+}
+
+.delay-2 {
+  animation-delay: 1s;
+}
+
+.loader {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: #FFFFFF99;
+  z-index: 1;
+  animation: disappear 1s ease-in forwards;
+  animation-delay: 2s;
+}
+
+.loader__item-1 {
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  z-index: 3;
+  height: 20px;
+  width: 20px;
+  border-radius: 0%;
+  overflow: hidden;
+  background-color: #9356DC;
+  animation: loader 1s ease-in-out forwards;
+  animation-iteration-count: 3;
+}
+
+.loader__item-2 {
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  z-index: 2;
+  height: 20px;
+  width: 20px;
+  border-radius: 0%;
+  overflow: hidden;
+  background-color: #FF79DA;
+  animation: loader 1s ease-in-out forwards;
+  animation-delay: 0.1s;
+  animation-iteration-count: 3;
+}
+
+.loader__item-3 {
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  z-index: 1;
+  height: 20px;
+  width: 20px;
+  border-radius: 0%;
+  overflow: hidden;
+  background-color: #99E2D0;
+  animation: loader 1s ease-in-out forwards;
+  animation-delay: 0.2s;
+  animation-iteration-count: 3;
+}
+
+@media screen and (min-width: 767px) {
+  .fonctionnement__stepsList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .fonctionnement__step {
+    margin-bottom: 20px;
+  }
+
+  .menuCategory > ol {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .menuCard {
+    width: 48%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .restaurants__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .restaurant {
+    width: 48%;
+  }
+
+  .menuCategory {
+    display: flex;
+    flex-direction: column;
+  }
+  .menuCategory__title {
+    align-self: center;
+  }
+  .menuCategory hr {
+    align-self: center;
+  }
+
+  .menuCard {
+    width: 35%;
+  }
+
+  .restaurantPage__orderButton button {
+    width: 30%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
