--- a/sass/style.scss
+++ b/sass/style.scss
@@ -205,7 +205,6 @@ $tertiaryColor : #99E2D0;
     display: flex;
     align-items: center;
     background-color: inherit;
-    overflow: hidden;
 
     i {
         font-size: 25px;
@@ -225,6 +224,7 @@ $tertiaryColor : #99E2D0;
         right: -50%;
         z-index: 1;
         transition: all 0.5s ease-in-out;
+        cursor: pointer;
 
         &:hover {
             opacity: 0;
@@ -268,6 +268,7 @@ footer {
 
 .header__backButton {
     font-size: 25px;
+    color: black;
 }
 
 .restaurantPage {
@@ -314,13 +315,16 @@ footer {
 }
 
 .menuCard {
-    background-color: white;
-    border-radius: 15px;
-    box-shadow: 3px 3px 10px #b8b8b8;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    overflow: hidden;
+    article {
+        background-color: white;
+        border-radius: 15px;
+        box-shadow: 3px 3px 10px #b8b8b8;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        overflow: hidden;
+        cursor: pointer;
+    }
 
     &:hover .menuCard__checkIcon {
         animation: slideIn 0.3s ease-in-out;
@@ -345,10 +349,14 @@ footer {
 .menuCard__details {
     padding: 12px;
     flex-grow: 1;
+    overflow: hidden;
 }
 
 .menuCard__title {
     margin-bottom: 7px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .menuCard__description {
