--- a/style.css
+++ b/style.css
@@ -104,12 +104,28 @@ table {
     width: 50px;
   }
 }
+@keyframes reverseSlideIn {
+  0% {
+    width: 50px;
+  }
+  100% {
+    width: 0;
+  }
+}
 @keyframes rotate {
   0% {
     transform: rotate(180deg);
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+@keyframes reverseRotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(180deg);
   }
 }
 * {
@@ -420,6 +436,7 @@ footer {
   width: 0px;
   align-items: center;
   justify-content: center;
+  animation: reverseSlideIn 0.3s ease-in-out;
 }
 
 .menuCard__details {
@@ -430,6 +447,12 @@ footer {
 
 .menuCard__title {
   margin-bottom: 7px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.menuCard__name {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -459,6 +482,7 @@ footer {
   background-color: white;
   color: #99E2D0;
   font-size: 12px;
+  animation: reverseRotate 0.3s ease-in-out backwards;
 }
 
 .delay-1 {
